# FastAPI-Deep-Dive

./: alembic.ini  pyproject.toml
alembic/versions/: 01f1eba7c6c6_add_user_table.py  048bdba2f529_create_posts_table.py  4c926640fb75_add_phone_number_to_user_table.py  7ae5878aa4ee_add_last_few_columns_to_posts_table.py  88fd2b28ba4c_add_foreign_key_to_posts_table.py  a9facb890de3_auto_vote.py  b8ce1b8a4755_create_column_to_posts_table.py  c1b2b0efbcb3_add_last_few_columns_to_posts_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
