[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["kavyal2 <kavya9140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.0"}
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.32"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
